--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <title>Paralax</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 </head>
 <body>
 
     <div class="top">
         <div class="perspective">
             <div class="card">
-                <div class="thumb" style="background-image:url(/rachel2.png)"></div>
+                <div class="thumb"></div>
                 <h2>Rachel</h2>
                 <h3>Dreaming To Realistics</h3>
             </div>
         </div>
     </div>
+    <script src="https://marcuslirio.github.io/Paralax/script.js"></script>
 </body>
 </html>
