--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             </div>
         </div>
     </div>
-    <script src="https://marcuslirio.github.io/Paralax/script.js"></script>
+    <script>
+    var o = $(".card");
+    $(".top").on("mousemove", function (t) {
+        var e = -($(window).innerWidth() / 2 - t.pageX) / 30,
+            n = -($(window).innerHeight() / 2 - t.pageY) / 10;
+
+        o.attr("style", "transform: rotateY(" + e +"deg)rotateX("+ n +"deg);-webkit-transform: rotateY("+ e +"deg) rotateX("+ n +"deg); -moz-transform: rotateY(" + e +"deg) rotateX("+ n +"deg)")
+
+    })
+    </script>
 </body>
 </html>
