--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="thumb"></div>
                 <h2>Rachel</h2>
-                <h3>Dreaming To Realistics</h3>
+                <h3>Dreams Can Be Real</h3>
             </div>
         </div>
     </div>
